--- a/src/components/CarouselBox/CarouselBox.module.css
+++ b/src/components/CarouselBox/CarouselBox.module.css
@@ -13,12 +13,12 @@
 
 .captionTitleContainer {
     position: absolute;
-    top: 293px;
+    top: 220px;
     color: #ffffff;
 }
 
 .introTitleContainer {
-    padding-bottom: 20px;
+    padding-bottom: 14px;
 }
 
 .introTitle {
@@ -35,33 +35,64 @@
     font-size: 17px;
 }
 
+.buttonInCarousel{
+    display: inline-block;
+    background: rgba(255, 176, 62, 0.50);
+    color: #fff;
+    padding: 12px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-family: Tahoma;
+    font-size: 18px;
+    line-height: 1;
+    font-weight: 100;
+    margin-top:25px;
+}
+.buttonInCarousel:hover{
+    color: #fff;
+    background: rgba(255, 176, 62, 0.87);
+}
 
-@media (max-width: 997px) {
+@media (max-width: 1335px){
 
     .captionTitleContainer {
-        top: 190px;
+        padding-left: 55px;
+    }
+}
+    @media (max-width: 997px) {
+
+    .captionTitleContainer {
+        top: 150px;
+        padding-left: 5px;
     }
 
     .captionTitleContainer h3 {
         font-size: 63px;
-    }
-
-    .introSubtitle {
-        font-size: 14px;
     }
 
     .introTitle {
         font-size: 63px;
     }
+    .introSubtitle {
+        font-size: 14px;
+    }
 }
 
+@media (max-width: 856px) {
+    .captionTitleContainer {
+        top: 120px;
+    }
+}
 @media (max-width: 768px) {
     .captionTitleContainer {
-        top: 150px;
+        top: 110px;
     }
 }
 @media (max-width: 746px){
     .captionTitleContainer h3 {
+        font-size: 53px;
+    }
+    .introTitle {
         font-size: 53px;
     }
 
@@ -69,4 +100,89 @@
         font-size: 12px;
     }
 
+    @media (max-width: 720px) {
+        .captionTitleContainer {
+            top: 110px;
+        }
+
+        .introTitleContainer {
+            padding-bottom: 12px;
+        }
+    }
+
+    @media (max-width: 680px) {
+        .captionTitleContainer {
+            top: 100px;
+            padding-left: 30px;
+        }
+        .captionTitleContainer h3 {
+            font-size: 43px;
+        }
+        .introTitle {
+            font-size: 43px;
+        }
+    }
+
+    @media (max-width: 640px) {
+        .captionTitleContainer {
+            top: 75px;
+            padding-left: 45px;
+        }
+        .captionTitleContainer h3 {
+            font-size: 40px;
+        }
+        .introTitle {
+            font-size: 40px;
+        }
+    }
+
+
+    @media (max-width: 510px) {
+        .captionTitleContainer {
+            top: 50px;
+            padding-left: 40px;
+        }
+        .captionTitleContainer h3 {
+            font-size: 35px;
+        }
+        .introTitle {
+            font-size: 35px;
+        }
+        .buttonInCarousel{
+            padding: 5px;
+            font-size: 14px;
+            margin-top:8px;
+        }
+
+        .introTitleContainer {
+            padding-bottom: 10px;
+        }
+    }
+    @media (max-width: 450px){
+        .captionTitleContainer {
+            top: 46px;
+            padding-left: 30px;
+        }
+        .captionTitleContainer h3 {
+            font-size: 30px;
+        }
+        .introTitle {
+            font-size: 30px;
+        }
+        .introSubtitle {
+            font-size: 10px;
+        }
+    }
+    @media (max-width: 376px){
+        .captionTitleContainer {
+            top: 22px;
+            padding-left: 30px;
+        }
+        .captionTitleContainer h3 {
+            font-size: 25px;
+        }
+        .introTitle {
+            font-size: 25px;
+        }
+    }
 }
