--- a/src/components/ContactsSection/ContactsInfo.module.css
+++ b/src/components/ContactsSection/ContactsInfo.module.css
@@ -14,26 +14,28 @@
     /*justify-content:flex-end;*/
 }
 .allContactsContainerTitles{
-
     font-size:20px;
     color: #4f4f4f;
-    font-weight:500;
+    font-weight:700;
 }
 .containerTitleWrapper{
     width:100%;
     display: flex;
+    padding-bottom: 15px;
+
 }
 
 .containerTitleWrapTitle{
-    width:18%
+    width:25%
 }
 .containerTitleWrapTitleAddress{
-    width:70%;
+    width:75%;
     padding-top: 5px;
     font-weight: 500;
+    text-align: start;
 }
 .containerTitleWrapTitleAddress a{
-    color: rgba(36, 36, 36, 0.91);
+    color: rgb(0, 0, 0);
     transition: color .2s linear;
     cursor: pointer;
 }
@@ -47,4 +49,31 @@
 }
 .faMapMarkerAlt{
     color: red;
+}
+
+@media (max-width: 1201px){
+
+    .containerTitleWrapTitle{
+        width:100%
+    }
+    .containerTitleWrapTitleAddress{
+        width:100%;
+        text-align: -webkit-center;
+    }
+    .containerTitleWrapper{
+        width:100%;
+        display: block;
+        text-align: -webkit-center;
+    }
+
+    .containerTitleWrapTitleAddress{
+        display:grid;
+    }
+}
+
+@media (max-width: 440px){
+    .containerTitleWrapTitleAddress a svg{
+        font-size: 16px;
+        margin: 0 0px 0px 5px;
+    }
 }
