--- a/src/components/Header/Header.modules.css
+++ b/src/components/Header/Header.modules.css
@@ -1,7 +1,7 @@
 /*Header background*/
 
 #root > div > div > nav {
-    background-color: rgba(71, 71, 71, .5);
+    background-color: rgba(91, 91, 91, .9);
     /*position: absolute;*/
     z-index: 99999;
     width: 100%;
@@ -18,11 +18,16 @@
 
 .NavLogoTitle {
     padding-top: 21px;
-    color: #f3b93e;
+    color:#ffb03e;
     font-size: 20px;
     font-weight: 700;
 }
 
 .containerLogoTitleFlex {
     display: flex;
+}
+@media (max-width: 450px){
+    .NavLogoTitle {
+        font-size: 18px;
+    }
 }
