--- a/src/components/PhoneNumber/PhoneNumber.module.css
+++ b/src/components/PhoneNumber/PhoneNumber.module.css
@@ -1,7 +1,7 @@
 .phoneNumber {
     padding-left:5px;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 15px;
     color: #fff;
     text-decoration: none;
     transition: color .2s linear;
@@ -21,6 +21,26 @@
 @media (max-width: 767px){
     .phoneNumber{
         display:block;
+    }
+}
+
+@media (max-width: 535px){
+    .phoneNumber{
+        font-size:15px;
+        padding-top:8px;
+    }
+
+    @media (max-width: 363px){
+        .phoneNumber{
+            font-size:14px;
+
+        }
+    }
+
+    @media (max-width: 323px){
+        .phoneNumber{
+            font-size:13px;
+        }
     }
 }
 
