--- a/src/components/HowWeWork/HowWeWork.module.css
+++ b/src/components/HowWeWork/HowWeWork.module.css
@@ -56,10 +56,23 @@
     .workSubContainer {
         width: 50%;
     }
+    .mainWorkTitle {
+        font-size: 25px;
+        padding-bottom: 5px;
+        padding-top: 25px;
+    }
+    .workSubIcon svg {
+        font-size: 30px;
+    }
 }
 
 @media (max-width: 541px) {
     .workSubContainer {
         width: 100%;
+    }
+    .mainWorkTitle {
+        font-size: 20px;
+        padding-bottom: 2px;
+        padding-top: 25px;
     }
 }
