--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,12 @@ a:hover {
 .wrapper-route{
     padding-top: 20px;
 }
+.navbar-light .navbar-toggler {
+    border-color: #ffb03e9c !important
+}
+
+@media (max-width: 450px){
+    ol.carousel-indicators{
+        display: none;
+    }
+}
