--- a/src/components/Header/Header.modules.css
+++ b/src/components/Header/Header.modules.css
@@ -2,11 +2,16 @@
 
 #root > div > div > nav {
     background-color: rgba(91, 91, 91, .9);
-    /*position: absolute;*/
+    position: fixed;
     z-index: 99999;
     width: 100%;
+    margin: 0;
+    border-radius: 0;
 }
 /*Header nav*/
+.nav-Custom{
+    font-size:15px;
+}
 #responsive-navbar-nav > div a {
     transition: color .3s linear;
     color: #cccccc;
