--- a/src/components/PhotoAlbum/PhotoAlbum.module.css
+++ b/src/components/PhotoAlbum/PhotoAlbum.module.css
@@ -10,7 +10,7 @@
 .photoFromWorkBtn{
     display: inline-block;
     background: rgb(255, 176, 62);
-    color: #ffffff;
+    color: #000000;
     padding: 12px;
     border-radius: 5px;
     text-decoration: none;
@@ -22,6 +22,6 @@
     margin-bottom: 25px;
 }
 .photoFromWorkBtn:hover{
-
+    background: rgb(231, 160, 43);
     color: #000000;
 }
